# torus-opengl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: config.h  config.h.in
shaders/: torus_fragment.glsl  torus_fragment_base.glsl  torus_geometry.glsl  torus_vertex_base.glsl
src/: ShaderFile.cpp  ShaderProgram.cpp  Torus.cpp  Utils.cpp
src/include/: ShaderFile.h  ShaderProgram.h  Torus.h  Utils.h
tests/: CMakeLists.txt  catch_main.h  utils_test.cpp
